--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,88 +1,27 @@
 {
-	// Disable the default formatter, use eslint instead
-	"editor.formatOnSave": true,
-	// Auto fix
-	"editor.codeActionsOnSave": {
-		"source.fixAll.eslint": "explicit",
-		"source.organizeImports": "never"
-	},
-	"editor.insertSpaces": false,
-	"editor.tabSize": 2,
-	// Silent the stylistic rules in you IDE, but still auto fix them
-	"eslint.rules.customizations": [
-		{
-			"rule": "style/*",
-			"severity": "off",
-			"fixable": true
-		},
-		{
-			"rule": "format/*",
-			"severity": "off",
-			"fixable": true
-		},
-		{
-			"rule": "*-indent",
-			"severity": "off",
-			"fixable": true
-		},
-		{
-			"rule": "*-spacing",
-			"severity": "off",
-			"fixable": true
-		},
-		{
-			"rule": "*-spaces",
-			"severity": "off",
-			"fixable": true
-		},
-		{
-			"rule": "*-order",
-			"severity": "off",
-			"fixable": true
-		},
-		{
-			"rule": "*-dangle",
-			"severity": "off",
-			"fixable": true
-		},
-		{
-			"rule": "*-newline",
-			"severity": "off",
-			"fixable": true
-		},
-		{
-			"rule": "*quotes",
-			"severity": "off",
-			"fixable": true
-		},
-		{
-			"rule": "*semi",
-			"severity": "off",
-			"fixable": true
-		}
-	],
-	// Enable eslint for all supported languages
-	"eslint.validate": [
-		"javascript",
-		"javascriptreact",
-		"typescript",
-		"typescriptreact",
-		"vue",
-		"html",
-		"markdown",
-		"json",
-		"jsonc",
-		"yaml",
-		"toml",
-		"xml",
-		"gql",
-		"graphql",
-		"astro",
-		"svelte",
-		"css",
-		"less",
-		"scss",
-		"pcss",
-		"postcss"
-	]
+  "[javascript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[javascriptreact]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "editor.codeActionsOnSave": {
+    "source.action.useSortedKeys.biome": "explicit",
+    "source.fixAll.biome": "explicit",
+    "source.organizeImports.biome": "explicit"
+  },
+  "editor.defaultFormatter": "biomejs.biome",
+  "editor.formatOnSave": true
 }
