--- a/package.json
+++ b/package.json
@@ -83,6 +83,9 @@
       }
     ]
   },
+  "dependencies": {
+    "typescript": "5.9.3"
+  },
   "description": "Print your target, such as variables, in JavaScript/TypeScript/Go files.",
   "devDependencies": {
     "@biomejs/biome": "^2.3.8",
@@ -91,8 +94,7 @@
     "@types/node": "24.10.1",
     "@types/vscode": "1.106.1",
     "@vscode/test-cli": "0.0.12",
-    "@vscode/test-electron": "2.5.2",
-    "typescript": "5.9.3"
+    "@vscode/test-electron": "2.5.2"
   },
   "displayName": "Print your target",
   "engines": {
@@ -116,5 +118,5 @@
     "vscode:prepublish": "pnpm run compile",
     "watch": "tsc -watch -p ./"
   },
-  "version": "0.0.5"
+  "version": "0.1.1"
 }
