chore: migrate linting and formatting from eslint to biome

--- a/package.json
+++ b/package.json
@@ -112,7 +112,8 @@
     "build": "pnpm build:package",
     "build:package": "pnpm vsce package --no-dependencies",
     "compile": "tsc -p ./",
-    "lint": "eslint src",
+    "lint": "biome check src",
+    "format": "biome format --write src",
     "pretest": "pnpm run compile && pnpm run lint",
     "test": "vscode-test",
     "vscode:prepublish": "pnpm run compile",
