--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,11 @@
     "rootDir": "src",
     "sourceMap": true,
     "strict": true /* enable all strict type-checking options */,
-    "target": "ES2022"
+    "target": "ES2022",
     /* Additional Checks */
-    // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-    // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-    // "noUnusedParameters": true,  /* Report errors on unused parameters. */
+    "noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
+    "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
+    "noUnusedParameters": true /* Report errors on unused parameters. */,
+    "noUnusedLocals": true /* Report errors on unused local variables. */
   }
 }
